# cpp-project-template

./: .gdb-args  .generate-dir-locals.sh  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
src/: main.cpp
tests/: CMakeLists.txt
